syntax = "proto3";

package user;
option java_package = "com.habitsystem.proto.user";
option java_multiple_files = true;

service UserService {
  rpc GetUser (GetUserRequest) returns (UserResponse) {}
  rpc GetUserByUsername (GetUserByUsernameRequest) returns (UserResponse) {}
  rpc CreateUser (CreateUserRequest) returns (UserResponse) {}
  rpc UpdateUser (UpdateUserRequest) returns (UserResponse) {}
}

message GetUserRequest {
  string user_id = 1;
}

message GetUserByUsernameRequest {
  string username = 1;
}

message CreateUserRequest {
  string username = 1;
  string email = 2;
  string password = 3;
}

message UpdateUserRequest {
  string user_id = 1;
  string email = 2;
  map<string, string> preferences = 3;
}

message UserResponse {
  string user_id = 1;
  string username = 2;
  string email = 3;
  string password = 4;
}
